# excom-ai-context-mesh

./: .gitignore  README.md  contextmesh.md  pyproject.toml
examples/banking/: northbound_server.py  run.py  system_prompt.md  test_playbooks.py
examples/banking/playbooks/: account_inquiry.md  credit_card_application.md  transaction_dispute.md
examples/hotel/: northbound_server.py  run.py  system_prompt.md  test_playbooks.py
examples/hotel/playbooks/: guest_complaint.md  loyalty_redemption.md  new_booking.md  reservation_modification.md  room_upgrade.md  service_request.md
examples/telco_billing/: cli.py  demo.py  demo_with_backend.py  example_workflow.py  mock_server.py  northbound_server.py  openapi.yaml  playbook_tools.py  prompts.py  run.py  system_prompt.md  test_playbooks.py  test_scenarios.py  tools.py
examples/telco_billing/playbooks/: general_rules.md  plan_upgrade.md  telco_billing_resolution.md
src/contextmesh/: __init__.py  cli.py
src/contextmesh/chains/: __init__.py  planner.py  prompts.py
src/contextmesh/core/: __init__.py  context.py  models 2.py  models.py  orchestrator.py
src/contextmesh/execution/: __init__.py  api_executor.py  state_manager.py
src/contextmesh/parsers/: __init__.py  openapi_parser.py  playbook_parser.py
src/contextmesh/templating/: __init__.py  engine.py
src/contextmesh/tools/: __init__.py  api_tool.py  openapi_tools.py  playbook_tools.py
src/contextmesh/utils/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/fixtures/: test_billing_resolution.md  test_openapi.yaml
tests/integration/: __init__.py  test_orchestrator.py
tests/unit/: __init__.py  test_context.py  test_openapi_parser.py  test_playbook_parser.py  test_state_manager.py  test_template_engine.py
